src/backend/vm/snapshots/shlang__backend__vm__tests__Modulo.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"10 % 3\")"
---
Ok(
    [
        (
            Int(
                1,
            ),
            2,
        ),
    ],
)
