src/backend/vm/snapshots/shlang__backend__vm__tests__Multiplication float.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"2.5 * 2.0\"))"
---
Ok(
    [
        Float(
            5.0,
        ),
    ],
)
