src/backend/vm/snapshots/shlang__backend__vm__tests__Multiplication int.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"5 * 3\")"
---
Ok(
    [
        (
            Int(
                15,
            ),
            2,
        ),
    ],
)
