src/backend/vm/snapshots/shlang__backend__vm__tests__Negation float.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"-3.14\")"
---
Ok(
    [
        (
            Float(
                -3.14,
            ),
            1,
        ),
    ],
)
