src/backend/vm/snapshots/shlang__backend__vm__tests__Negation int.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"-10\")"
---
Ok(
    [
        (
            Int(
                -10,
            ),
            1,
        ),
    ],
)
