src/backend/vm/snapshots/shlang__backend__vm__tests__NotEq.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"1/2 != 0.5\"))"
---
Ok(
    [
        Bool(
            true,
        ),
    ],
)
