src/backend/vm/snapshots/shlang__backend__vm__tests__NullCoalescing with false.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"false ?? true\"))"
---
Ok(
    [
        Bool(
            false,
        ),
    ],
)
