src/backend/vm/snapshots/shlang__backend__vm__tests__NullCoalescing with null.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"null ?? 10\")"
---
Ok(
    [
        (
            Int(
                10,
            ),
            2,
        ),
    ],
)
