src/backend/vm/snapshots/shlang__backend__vm__tests__NullCoalescing with number.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"5 ?? 10\"))"
---
Ok(
    [
        Int(
            5,
        ),
    ],
)
