src/backend/vm/snapshots/shlang__backend__vm__tests__NullCoalescing with string.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"\\\"hello\\\" ?? \\\"world\\\"\"))"
---
Ok(
    [
        String(
            "hello",
        ),
    ],
)
