src/backend/vm/snapshots/shlang__backend__vm__tests__Precedence add mult.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"2 + 3 * 4\"))"
---
Ok(
    [
        Int(
            14,
        ),
    ],
)
