src/backend/vm/snapshots/shlang__backend__vm__tests__Precedence with parens.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"(2 + 3) * 4\")"
---
Ok(
    [
        (
            Int(
                20,
            ),
            4,
        ),
    ],
)
